[tool.poetry]
name = "gpt-squared"
version = "0.1.0"
description = ""
authors = ["Sergey Karayev <sergeykarayev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
bs4 = "*"
replit = "^3.2.4"
openai = "^0.23.0"
requests = "*"
colorama = "^0.4.5"
lxml = "^4.9.1"
googlesearch-python = "^1.1.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
